// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 27,
  "inputs": 6,
  "lengthBucket": 79,
  "selects": 0,
  "sha": "d506eef49009cc96",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "6d2aa43edf8cc526",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 112,
  "inputs": 11,
  "lengthBucket": 846,
  "selects": 3,
  "sha": "a054d080e88f77f6",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 1,
  "lengthBucket": 726,
  "selects": 0,
  "sha": "c4cd765e94373575",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 80,
  "selects": 0,
  "sha": "c8bb0a804e5c4ec9",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 89,
  "selects": 0,
  "sha": "dd3bc57a7aba62a0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 24,
  "inputs": 0,
  "lengthBucket": 166,
  "selects": 0,
  "sha": "9e577dfd9d926fc0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 33,
  "inputs": 5,
  "lengthBucket": 185,
  "selects": 0,
  "sha": "24a6bc20913a68bd",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 226,
  "selects": 0,
  "sha": "0f93ceb5af1c1403",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 50,
  "inputs": 1,
  "lengthBucket": 146,
  "selects": 0,
  "sha": "7afb452a85c6b86b",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 14,
  "inputs": 5,
  "lengthBucket": 99,
  "selects": 2,
  "sha": "658e98b0a147ed6d",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 38,
  "inputs": 1,
  "lengthBucket": 223,
  "selects": 0,
  "sha": "95e66303b66f9c02",
  "svgs": 0,
}
`;
